--- a/GoIT/markup/home/lesson1/FITNESS-3dz/css/main.css
+++ b/GoIT/markup/home/lesson1/FITNESS-3dz/css/main.css
@@ -1,4 +1,4 @@
-/* общие*/
+﻿/* общие*/
 @font-face {
 	font-family: 'OpenSansRegular';
 	src: url('../css/fonts/OpenSansRegular.eot');
@@ -73,7 +73,7 @@ html {
   height:100%;
 }
 body{
-  height:auto !important;
+
   height:100%;
   min-height:100%;
 }
