--- a/GoIT/markup/home/lesson1/5 dz Cadastre( not flexible)/css/main.css
+++ b/GoIT/markup/home/lesson1/5 dz Cadastre( not flexible)/css/main.css
@@ -14,7 +14,9 @@
 .smallLine,
 .smallText,
 .checkbox__indent,
-.checkbox__text {
+.checkbox__text,
+.link__F-book,
+.link__LogIn {
 	display: inline-block;
 }
 html {
@@ -154,6 +156,34 @@ header {
 .blackSmall__link {
 	padding: 36px 0 32px;
 	display: block;
+	font-size: 0;
+}
+.small1{
+	font-size: 0;
+}
+.link__LogIn {
+	vertical-align: top;
+	width: 237px;
+	height: 34px;
+	line-height: 34px;
+	font-size: 14px;
+	color: #f5ffff;
+    background: #3d5698; /* Old browsers */
+    background: -moz-linear-gradient(top,  #3d5698 0%, #344066 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #3d5698 0%,#344066 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #3d5698 0%,#344066 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d5698', endColorstr='#344066',GradientType=0 ); /* IE6-9 */
+	border-top: 1px solid #7789b7;
+	border-radius: 0px 4px 4px 0px;
+}
+.logIn_bold{
+	font-weight: bold;
+}
+.logIn__indent1 {
+	padding-left: 31px;
+}
+.logIn__indent2 {
+	padding-left: 21px;
 }
 .blackSmall__ou {
 	margin-bottom: 30px;
