--- a/GoIT/markup/home/lesson1/4dz Asia Holidays Maldives( not flexible)/css/main.css
+++ b/GoIT/markup/home/lesson1/4dz Asia Holidays Maldives( not flexible)/css/main.css
@@ -86,14 +86,12 @@ body {
 /*конец общие*/
 /*начало основного блока*/
 .b-conteiner {
-	margin: 0 auto;
+	margin: 38px auto 0;
 	width: 1000px;
 	height: 100%;
 	min-height:100%;
 }
-.b-emptyPart {
-	height: 38px;
-}	
+	
 /*блок шапка*/
 /*блок лого*/
 .b-logo {
