--- a/GoIT/javascript/home/lesson1/do_not_check/css/my_ie_style.css
+++ b/GoIT/javascript/home/lesson1/do_not_check/css/my_ie_style.css
@@ -118,29 +118,37 @@ img {
 
 .sliders {
   color: #fff; }
-
+.photo-credits{
+  width: 300px;
+}
 .sliders__link {
-  margin-bottom: 20px;
+  margin: 0 auto;
   display: block;
   width: 70px;
   height: 20px;
   line-height: 20px;
   font-family: "Conv_Montserrat-Regular", sans-serif;
   font-size: 10px;
-  color: #fff;
+  color: #000;
   text-align: center;
   background-color: #ff4e50;
   border-radius: 8px; }
 
 .sliders__slogan {
-  margin-bottom: 20px;
+  margin: 10px auto 0;
+  display: block;
   font-family: "Conv_Montserrat-Bold", sans-serif;
-  font-size: 24px; }
+  font-size: 24px;
+  color: #000;
+  text-align: center; }
 
 .sliders__text {
+  margin: 10px auto 0;
+  display: block;
   font-family: "Conv_Roboto-Light", sans-serif;
   line-height: 17px;
-  opacity: .60; }
+  color: #000 ;
+  text-align: left;}
 
 /* block__partners */
 .man {
@@ -154,16 +162,20 @@ img {
   height: 120px; }
 
 .man__foto_1 {
-  background: url(../img/man__1.png); }
+  background-image: url(../img/man__1.png);
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/Login-BG.png', sizingMethod='scale')"; }
 
 .man__foto_2 {
-  background: url(../img/man__2.png); }
+  background-image: url(../img/man__2.png);
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/Login-BG.png', sizingMethod='scale')"; }
 
 .man__foto_3 {
-  background: url(../img/man__3.png); }
+  background-image: url(../img/man__3.png);
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/Login-BG.png', sizingMethod='scale')"; }
 
 .man__foto_4 {
-  background: url(../img/man__4.png); }
+  background-image: url(../img/man__4.png);
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/Login-BG.png', sizingMethod='scale')"; }
 
 .foto__icon {
   position: absolute;
@@ -171,7 +183,8 @@ img {
   bottom: 0;
   width: 40px;
   height: 40px;
-  background: url(../img/man_ideas.png); }
+  background-image: url(../img/man_ideas.png);
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/Login-BG.png', sizingMethod='scale')"; }
 
 .foto__icon_1 {
   background-position: 0 0; }
@@ -242,7 +255,7 @@ img {
   height: 40px;
   line-height: 40px;
   font-family: "Conv_Montserrat-Bold", sans-serif;
-  color: #fff;
+  color: #000;
   background-color: #ff4e50;
   border: 0;
   border-radius: 30px;
@@ -276,14 +289,13 @@ img {
   font-family: "Conv_Montserrat-Bold", sans-serif;
   font-size: 10px;
   color: #cccccc; }
-_________________________________________________________________________
+
    /*   part_1 */
-  .part_1 {
-    background: #734440 url(../img/main__img_for_Desktop.jpg) no-repeat;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;}
+  .part__block_1 {
+    background-image:  url(../img/main__img_for_Desktop.jpg) ;
+    background-repeat: no-repeat;
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/Login-BG.png', sizingMethod='scale')";
+}
 
     /* part_1  line 1 */
   .part__block {
@@ -306,6 +318,9 @@ _________________________________________________________________________
     float: left; }
 
   /* 	part_1  line 2 */
+  .content__header{
+    text-align: center;
+  }
   .center__content {
     width: 478px; }
 
@@ -323,12 +338,11 @@ _________________________________________________________________________
 
   /* 	part_2 */
   .part__block_2 {
-    padding: 100px 0;
-    width: 748px; }
+    padding: 100px 0; }
 
   /* block__works Carousel */
   .works__topic {
-    margin: 0 auto 40px;
+    margin: 100px auto 40px;
     width: 404px; }
 
   .topic_line {
@@ -339,12 +353,12 @@ _________________________________________________________________________
     height: 100%;
     float: left;
     background-color: #fff; }
-
-  .jcarousel__sliders,
+  
+  .sliders__item,
   .jcarousel-control-prev,
-  .jcarousel-control-next {
-    display: block; }
-
+  .jcarousel-control-next{
+    display: none;
+  }
   .sliders,
   .jcarousel li {
     width: 300px;
@@ -356,7 +370,7 @@ _________________________________________________________________________
 
   /* block__partners */
   .block__partners {
-    margin: 100px 0; }
+    margin: 100px 0 100px; }
 
   .partners__other {
     margin-top: 54px; 
